syntax = "proto3";

package user;

option go_package = "github.com/ARUN-AK5396/gRPC/proto;proto";

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc PostUserData (PostUserDataRequest) returns (PostUserDataResponse);
}

message GetUserRequest {}

message GetUserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message PostUserDataRequest {
  string data = 1;
}

message PostUserDataResponse {
  string message = 1;
}
